--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="start">
         <nav>
-           <img src="F:\profile.jpg" alt="" width="125px" height="150px" class="logo">
+           <img src="ph.jpg" alt="" width="125px" height="150px" class="logo">
            <ul>
             <li><a href="#home" >HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
