--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     <div class="overall">
        <div class="reg">
         <h2>Online meet</h2>
-        <img src="C:\Users\sree\OneDrive\Pictures\Screenshots\Screenshot (366).png" alt="reg form" width="590px" height="390px">
+        <img src="Screenshot (366).png" alt="reg form" width="590px" height="390px">
        </div>
        <div class="rcp">
         <h2>Flight booking website</h2>
-        <img src="C:\Users\sree\OneDrive\Pictures\Screenshots\Screenshot (368).png" alt="recipe card" width="590px" height="390px">
+        <img src="Screenshot (368).png" alt="recipe card" width="590px" height="390px">
        </div>
     </div>
     </section>
