--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="#">DOWNLOAD RESUME</a>
     </div>
     <div class="pictures">
-        <img src="F:\profile.jpg" class="profile">
+        <img src="ph.jpg" class="profile">
     </div>
     <br><br><br><br><br>
 </section>
